Fixed issue where images would not display correctly, especially on mobile devices.

--- a/themes/poison/assets/css/custom.css
+++ b/themes/poison/assets/css/custom.css
@@ -23,9 +23,12 @@ a:hover {
 	padding: 2px;
 }
 
-img {
-	margin: auto;
+div.image-grid {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	max-width: 95%;
 }
 
-@media(prefers-color-scheme: light) {}
-
+img {
+	max-width: 100% !important;
+}
